--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
