--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 .DS_Store
-node_modules/
-/dist/
-package-lock.json
-Œ Ã‚º«¬º.txt
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Editor directories and files
 .idea
@@ -14,3 +19,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+*.sw?
